load("@llvm-project//mlir:tblgen.bzl", "gentbl_cc_library", "td_library")

package(
    default_visibility = ["//visibility:public"],
)

td_library(
    name = "PassesTdFiles",
    srcs = ["Passes.td"],
    deps = [
        "@llvm-project//mlir:OpBaseTdFiles",
        "@llvm-project//mlir:RewritePassBaseTdFiles",
    ],
)

gentbl_cc_library(
    name = "PassesIncGen",
    tbl_outs = [
        (
            ["-gen-pass-decls"],
            "Passes.h.inc",
        ),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = ":Passes.td",
    deps = [
        ":PassesTdFiles",
        "@llvm-project//mlir:PassBaseTdFiles",
    ],
)

cc_library(
    name = "codegen",
    srcs = [
        "CppLanguageSyntax.cpp",
        "RustLanguageSyntax.cpp",
        "codegen.cpp",
        "gen_cpp.cpp",
        "gen_gpu.cpp",
        "gen_recursion.cpp",
        "gen_rust.cpp",
        "mustache.h",
    ],
    hdrs = [
        "Passes.h",
        "codegen.h",
    ],
    data = [":data"],
    deps = [
        ":PassesIncGen",
        ":protocol_info_const",
        "//zirgen/Dialect/ZHLT/IR:Codegen",
        "//zirgen/Dialect/Zll/Analysis",
        "//zirgen/Dialect/Zll/Transforms:passes",
        "//zirgen/circuit/recursion:lib",
    ],
)

cc_library(
    name = "protocol_info_const",
    srcs = ["protocol_info_const.h"],
)

filegroup(
    name = "data",
    srcs = [
        "cpp/poly.tmpl.cpp",
        "cpp/recursion/step.tmpl.cpp",
        "cpp/step.tmpl.cpp",
        "gpu/eval_check.tmpl.cu",
        "gpu/eval_check.tmpl.metal",
        "gpu/recursion/eval_check.tmpl.cu",
        "gpu/recursion/step.tmpl.cu",
        "gpu/recursion/step_compute_accum.tmpl.cu",
        "gpu/recursion/step_compute_accum.tmpl.metal",
        "gpu/recursion/step_verify_accum.tmpl.cu",
        "gpu/recursion/step_verify_accum.tmpl.metal",
        "gpu/step.tmpl.cu",
        "gpu/step.tmpl.metal",
        "rust/info.tmpl.rs",
        "rust/poly_ext_def.tmpl.rs",
        "rust/taps.tmpl.rs",
    ],
)
